# scalpel

./: .gitignore  Cargo.toml  README.md  bytes  bytes_scalpel
src/: byte_offset.rs  cmd_serialize.rs  concat.rs  cut.rs  errors.rs  legacy_signer.rs  main.rs  signature.rs  signer.rs  stitch.rs
tmp/: ed25519.pk8  ed25519_keypair.pk8  publicKey_test.pem  test_bytes  test_keypair.pem
