[package]
name = "scalpel"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@nello.io>"]

[dependencies]
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.5"
lazy_static = "*"
bytes = "0.4.9"
ring = "0.12.1"
untrusted = "0.5.1"
regex = "*"
failure = "*"
failure_derive = "*"
common_failures = "0.1.0"

[dev-dependencies]
rand = "*"